istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: modern-devops-gateway
  namespace: demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "modern-devops-demo.local"
    - "api.modern-devops-demo.local"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "modern-devops-demo.local"
    - "api.modern-devops-demo.local"
    tls:
      mode: SIMPLE
      credentialName: modern-devops-tls
